added superhero page

--- a/superhero.html
+++ b/superhero.html
@@ -2,9 +2,25 @@
     <head>
 
     </head>
+    <link rel="stylesheet" href="superhero.css">
+    
     <body>
-        <title>Superheror</title>
+        <title>Superhero</title>
+        <div id="Superhero_detail" class="">
+            <div id="photo"></div>
+            
+            <div id="other_details">
+                <div id="name"></div>
+                <div class="commonHeadingFeatures">Description: <div class="informationList" id="description"></div></div>
+                <div class="commonHeadingFeatures">Comics: <div class="informationList" id="comics"></div></div>
+                <div class="commonHeadingFeatures">Events: <div class="informationList" id="events"></div></div>
+                <div  class="commonHeadingFeatures"> Series: <div class="informationList" id="series"></div></div>
+                <div class="commonHeadingFeatures"> Stories: <div class="informationList" id="stories"></div></div>
+            </div>
+        </div>
 
-        <!-- <script src="home.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+
+        <script src="superhero.js"></script>
     </body>
 </html>
