--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Marvel Superhero</h1>
-
+    <div id="favourite">Favourite</div>
     <div id="search-bar" class="beFlex">
         <input placeholder="Enter the Superhero Name" type="text" id="search-box" >
         <span><i class="fa-brands fa-searchengin" style="color: #94051a;"></i></span>
@@ -16,7 +16,6 @@
 
     <div id="super-list-container">
         <ul id="list">
-         
         </ul>
     </div>
 
