added favourite page

--- a/superhero.html
+++ b/superhero.html
@@ -3,9 +3,15 @@
 
     </head>
     <link rel="stylesheet" href="superhero.css">
+    <script src="https://kit.fontawesome.com/d80069c1ff.js" crossorigin="anonymous"></script>
+
     
     <body>
         <title>Superhero</title>
+        <div id="home">Home</div>
+        <div id="favourite">Favourite</div>
+        <i class="fa-solid fa-star" id=""></i>
+
         <div id="Superhero_detail" class="">
             <div id="photo"></div>
             
