--- a/favourite.html
+++ b/favourite.html
@@ -1,14 +1,20 @@
 <html>
     <head>
         <link rel="stylesheet" href="favourite.css">
+        <script src="https://kit.fontawesome.com/d80069c1ff.js" crossorigin="anonymous"></script>
+
     </head>
     <body>
         <title>Favourite</title>
+        <div id="home">Home</div>
+        <h1>Favourite Superhero</h1>
         <div id="super-list-container">
             <ul id="list">
             </ul>
         </div>
     </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+
     <script src="favourite.js"></script>
 
 </html>
