--- a/favourite.html
+++ b/favourite.html
@@ -5,16 +5,22 @@
 
     </head>
     <body>
+
         <title>Favourite</title>
+
         <div id="home">Home</div>
+
         <h1>Favourite Superhero</h1>
+
         <div id="super-list-container">
             <ul id="list">
             </ul>
         </div>
-    </body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 
+    </body>
+    
+<!-- script tag for crypto js and JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
     <script src="favourite.js"></script>
 
 </html>
